# industrial-control-test-agent

./: .gitignore  README.md  pyproject.toml  人工智能.md
.github/workflows/: ci.yml
agent/: README.md
backend/: README.md
capability_packs/mcu_uart/: instructions.md  manifest.yaml  workflow.yaml
capability_packs/plc_start_feedback/: instructions.md  manifest.yaml  workflow.yaml
competition/: README.md
docs/: README.md  agent-architecture.md  architecture.md  capability-pack-specification.md  domain-model.md  mcp-integration.md  ownership-boundary.md  project-charter.md  project-strategy.md  safety-boundary.md  skill-specification.md  system-context.md  team-work-packages.md
docs/adr/: 0001-architecture-baseline.md  0002-agent-skill-separation.md  0003-mcp-trust-boundary.md  ADR-004-append-only-evidence.md  ADR-005-capability-pack-model.md  ADR-006-mcp-as-integration-layer.md  ADR-007-langgraph-runtime-boundary.md  ADR-008-human-approval-for-device-changes.md  ADR-009-contract-source-of-truth.md
frontend/: README.md
hardware/: README.md
knowledge/: README.md
schemas/: action-intent.schema.json  capability-manifest.schema.json  capability-pack.schema.json  case-state.schema.json  checkpoint-envelope.schema.json  evidence.schema.json  finding.schema.json  hypothesis.schema.json  observation.schema.json  policy-result.schema.json  skill-manifest.schema.json  tool-capability.schema.json
simulator/: README.md
src/industrial_test_agent/: __init__.py
tests/: README.md
tests/contract/: conftest.py  test_capability_manifest_validation.py  (+8 more)
tools/: README.md
(+104 files in other folders)
