[project]
name = "industrial-control-test-agent"
version = "0.1.0"
description = "工业控制测试代理框架基线"
authors = [{name = "liujing4563-ctrl", email = "noreply@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "PyYAML>=6.0",
    "ruff>=0.15,<0.16",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
